# generate-commit-message

./: .hgignore  LICENSE  README.md  commitbot.py  main.py  pyproject.toml
