[project]
name = "commitbot"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Abhijith Nayak", email = "abhijith@reconzo.com" }]
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.11.0",
  "asttokens==3.0.1",
  "cachetools==6.2.2",
  "certifi==2025.11.12",
  "charset-normalizer==3.4.4",
  "coverage==7.13.0",
  "decorator==5.2.1",
  "docutils==0.22.3",
  "executing==2.2.1",
  "flit==3.12.0",
  "flit-core==3.12.0",
  "google-auth==2.43.0",
  "google-genai==1.52.0",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "idna==3.11",
  "iniconfig==2.3.0",
  "ipython==9.7.0",
  "ipython-pygments-lexers==1.1.1",
  "jedi==0.19.2",
  "librt==0.7.4",
  "matplotlib-inline==0.2.1",
  "mypy==1.19.1",
  "mypy-extensions==1.1.0",
  "packaging==25.0",
  "parso==0.8.5",
  "pathspec==0.12.1",
  "pexpect==4.9.0",
  "pluggy==1.6.0",
  "prompt-toolkit==3.0.52",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "pyasn1==0.6.1",
  "pyasn1-modules==0.4.2",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "pygments==2.19.2",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-timer==1.0.0",
  "requests==2.32.5",
  "rsa==4.9.1",
  "sniffio==1.3.1",
  "stack-data==0.6.3",
  "tenacity==9.1.2",
  "termcolor==3.2.0",
  "tomli-w==1.2.0",
  "traitlets==5.14.3",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "urllib3==2.5.0",
  "wcwidth==0.2.14",
  "websockets==15.0.1",
]
dynamic = ["description", "version"]

[project.urls]
Home = "https://github.com/reconzo-abhijith/generate-commit-message"

[project.scripts]
commitbot = "commitbot:main"

[project.optional-dependencies]
build = ["flit"]
dev = ["ipython"]
test = ["pytest", "mypy", "pytest-timer[termcolor]", "pytest-cov"]

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"
